--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Timesheet Prototype",
+  "name": "timesheet-prototype",
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
