--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-sass": "~0.6.0"
+    "grunt-contrib-sass": "~0.5.0"
   },
   "engines": {
     "node": ">=0.10"
